--- a/Learning/PDDLAlgorithm.tex
+++ b/Learning/PDDLAlgorithm.tex
@@ -1,6 +1,7 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 
+In the above description of the sceitific method and the algorithm derived from it, we 
 We will now present a formalization of \Cref{algo:science}
 
 Given a PDDL problem, it is then the agent's task to reach the goal specified by the problem by learning the effects and preconditions of the relevant actions. Thus, in this instance the \textit{question} from algorithm~\ref{algo:science} is a PDDL problem, and the $canAnswer$ function consists of checking whether the problem has been solved in the given state (denoted $isSolved$).
